# mamba-vla

./: .cursorrules  .gitignore  INSTRUCTIONS.md  README.md  inference.py  pyproject.toml  train_policy.py
examples/bbox_cotrain/: README.md
examples/libero/: README.md
job_output/: debug-multinode-train.out.3399606  download-calvin.out.44002389  first-train.out.3391120  first-train.out.3399237  memory_profiler.out.3379750  memory_profiler.out.3379754  memory_profiler.out.3379756  memory_profiler.out.3379787  memory_profiler.out.3379855  memory_profiler.out.3379889  memory_profiler.out.3387250  memory_profiler.out.3387606  memory_profiler.out.3387625  memory_profiler.out.3387661  memory_profiler.out.3387685  memory_profiler.out.3387777  memory_profiler.out.3388715  memory_profiler.out.3388905  memory_profiler.out.3389252  memory_profiler.out.3389573  memory_profiler.out.3389619  memory_profiler.out.3389637  memory_profiler.out.3389663  memory_profiler.out.3389682  memory_profiler.out.3389688  memory_profiler.out.3390290  memory_profiler.out.3390391  memory_profiler.out.3390413  memory_profiler.out.3390503  memory_profiler.out.3390533
normalization_stats/calvin/calvin-horizon_10-history_1.npz/: calvin-horizon_10-history_1.npz  cfg.yaml
normalization_stats/libero/IPEC-COMMUNITY/: libero_spatial-horizon_10-history_1.npz  libero_spatial-horizon_20-history_1.npz
scripts/: compute_norm_stats.py  eval.py  patch_mamba_ssm.py  predict_bbox.py  profile_memory.py  rebuild_mamba.sh  serve_policy.py  train_policy.py
vla_scratch/: helpers.py
vla_scratch/configs/data/: __init__.py  droid.py
vla_scratch/datasets/: __init__.py  config.py  data_types.py  libero.py
vla_scratch/datasets/bbox_cotrain/: config.py  dataset.py
vla_scratch/datasets/calvin/: __init__.py  config.py  dataset.py
vla_scratch/datasets/dont_blind/: config.py  lerobot_dataset.py
vla_scratch/datasets/droid/: config.py  dataset.py
vla_scratch/datasets/libero/: config.py  lerobot_ipec.py  transforms.py
vla_scratch/datasets/libero_global/: config.py  dataset.py
vla_scratch/helpers/: data.py  training.py
vla_scratch/policies/: README.md  __init__.py  config.py  data_types.py  utils.py
vla_scratch/policies/mamba/: __init__.py  config.py  policy.py
vla_scratch/policies/mlp/: __init__.py  config.py  policy.py
vla_scratch/policies/modules/: dit.py
vla_scratch/policies/modules/action_expert/: __init__.py  cross_attention_dit.py  dit.py  simple_mlp.py
vla_scratch/policies/modules/vlm_bridge/: __init__.py  base.py  data_types.py
vla_scratch/policies/modules/vlm_bridge/mamba/: __init__.py  bridge.py  processor.py
vla_scratch/policies/modules/vlm_bridge/paligemma/: bridge.py  processor.py
vla_scratch/policies/modules/vlm_bridge/qwen/: bridge.py  processor.py  utils.py
vla_scratch/policies/modules/vlm_bridge/smolvlm/: bridge.py  utils.py
vla_scratch/policies/pi/: config.py  policy.py  transforms.py  utils.py
vla_scratch/policies/utils/: diffusion.py  transformers.py
vla_scratch/serving/: transforms.py
vla_scratch/transforms/: base.py  common.py  data_keys.py  data_types.py  normalization.py
vla_scratch/utils/: __init__.py  checkpoint.py  config.py  math.py
vla_scratch/utils/serving/: zmq_policy_server.py
