[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vla-scratch"
version = "0.1.0"
description = "Utilities for working with VLA Scratch datasets and policies."
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "h5py>=3.9",
    "sentencepiece>=0.1.99",
    "transformers>=4.38",
    "jaxtyping>=0.2.25",
    "fsspec>=2023.6.0",
    "filelock>=3.12",
    "tqdm-loggable>=0.1.5",
    "pytest>=7.0",
    "tqdm",
    "einops",
    "tensordict",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "vla_scratch",
    "vla_scratch.*",
]
namespaces = true
